--- a/curator-job.yml
+++ b/curator-job.yml
@@ -4,29 +4,45 @@ metadata:
   name: curator
   namespace: logging
 spec:
+  completions: 1
+  parallelism: 1
   template:
+    metadata:
+      labels:
+        job-name: curator
     spec:
       containers:
-      - name: curator
-        image: ubirch/ubirch-elastic-curator-container:latest
-        imagePullPolicy: Always
-        env:
+      - env:
         - name: NAMESPACE
           valueFrom:
             fieldRef:
+              apiVersion: v1
               fieldPath: metadata.namespace
         - name: NODE_NAME
           valueFrom:
             fieldRef:
+              apiVersion: v1
               fieldPath: metadata.name
         - name: ES_LOG_HOST
           valueFrom:
             configMapKeyRef:
-              name: logging-config
               key: logging_host
+              name: logging-config
         - name: ES_LOG_PORT
           valueFrom:
             configMapKeyRef:
-              name: logging-config
               key: logging_port
+              name: logging-config
+        image: ubirch/ubirch-elastic-curator-container:latest
+        imagePullPolicy: Always
+        # if you want to run the curator in REAL ACTION mode enable the next line
+        # command: ["/usr/local/bin/curator",  "--config", "/opt/config.yml", "/opt/action_delete.yml"]
+        name: curator
+        resources: {}
+        terminationMessagePath: /dev/termination-log
+        terminationMessagePolicy: File
+      dnsPolicy: ClusterFirst
       restartPolicy: Never
+      schedulerName: default-scheduler
+      securityContext: {}
+      terminationGracePeriodSeconds: 30
