adjusting for use of configmap

--- a/curator-job.yml
+++ b/curator-job.yml
@@ -52,5 +52,5 @@ spec:
       volumes:
         - name: curator-config
           configMap:
-             name: curator-configmap
+             name: curator-config
              defaultMode: 420
