changed config to purge everything older than 30 days

--- a/curator-job.yml
+++ b/curator-job.yml
@@ -36,7 +36,7 @@ spec:
         image: ubirch/ubirch-elastic-curator-container:latest
         imagePullPolicy: Always
         # if you want to run the curator in REAL ACTION mode enable the next line
-        # command: ["/usr/local/bin/curator",  "--config", "/opt/config.yml", "/opt/action_delete.yml"]
+        command: ["/usr/local/bin/curator",  "--config", "/opt/config.yml", "/opt/action_file.yml"]
         name: curator
         resources: {}
         terminationMessagePath: /dev/termination-log
